# color_wfc_visualizer

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md
color_wave_function_collapse/: CMakeLists.txt
color_wave_function_collapse/src/: color_wave_function_collapse.cpp
color_wave_function_collapse/src/config/: app_config.hpp
color_wave_function_collapse/src/forms/: cell_details.cpp  cell_details.hpp  settings.cpp  settings.hpp  visualizer.cpp  visualizer.hpp
color_wave_function_collapse/src/lib/: thread_pool.cpp  thread_pool.hpp
color_wave_function_collapse/src/wfc/: cell_candidate.hpp  cell_candidate_type.hpp  color_tile.hpp  color_tile_candidate.hpp  position.hpp  wave_function_collapse.cpp  wave_function_collapse.hpp
